--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
     <p>ID</p>
     <p>E-mail</p>
     <p>Никнеймы</p>
+    <p>Кол-во постов</p>
+    <p>Действия</p>
     </div>
 
     <div class="users_section">
@@ -14,6 +16,9 @@
           <p><%= user.id %></p>
           <p><%= link_to user.email, user %></p>
           <p><%= user.username %></p>
+
+          <p><%= Post.where(user_id: user.id).count %></p>
+          <p><%= link_to 'Удалить', user, method: :delete, data: { confirm: 'Вы уверены, что хотите удалить пользователя?' } %></p>
           
         </div>
       <% end %>
