--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,6 @@
     width: 100%;
     
    
-    border-bottom: 1px solid #ddd;
   }
 
   .top_menu a {
@@ -40,7 +39,6 @@
     display: flex;
     width: 100%;
     height: 60px;
-    justify-content: end;
     align-items: center;
     margin-bottom: 100px;
 
@@ -77,10 +75,21 @@
   .logo {
     font-style: 48px;
     color: black;
+    margin-right: 1200px;
+  }
+
+  .navbar_logo {
+    background-size: contain;
+    height: 40px;
+    background-image: url('logo.png');
+    background-repeat: no-repeat;
+    margin-left: 40px;
+
+    
   }
 
   .signin_btn {
-    margin-right: 40px;
+    margin-right: 10px;
     color: #656565;
     padding: 2px;
   }
@@ -107,5 +116,57 @@
       color: black;
       margin-bottom: 16px;
       font-size: 22px;
+
+      
     }
+  }
+
+  .registrationfield {
+    height: 200px;
+  }
+
+  .form_section {
+
+    display: flex;
+    flex-direction: column;
+    a{
+   color: #020303;
+ }
+  }
+
+  form {
+display: flex;
+flex-direction: column;
+ 
+
+  }
+
+  .field {
+    outline: none;
+    margin-bottom: 20px;
+
+     input {
+       outline: none;
+       height: 42px;
+       border: 2px solid #020303;
+       border-radius: 4px;
+       
+     }
+
+
+     .userpick_field {
+       outline: none;
+       border-radius: 2px;
+       border: none;
+       
+     }
+  }
+
+
+  .form_btn {
+    background: #020303;
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-size: 22px;
+    color: white;
   }
