--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -35,8 +35,29 @@
       
     }
     
-    .ctreatecategory_btn {
-      color: black;
-      margin-top: 20px;
+  
+    
+
+    .categories_form {
+      display: flex;
+      flex-direction: column;
+
+
+    }
+
+    .categoriespage_container {
+      display: flex;
+      flex-direction: column;
+
+      .category_name {
+
+        margin-bottom: 40px !important;
+        
+      }
     }
     
+    .createcategory_btn {
+      color: #020303 !important;
+      margin-top: 20px;
+
+    }
