--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -153,6 +153,10 @@
 }
 
 
+.postsfeed {
+  display: flex;
+  flex-direction: column;
+}
 
 .post_content {
   margin-top: 33px;
@@ -182,6 +186,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  align-items: center;
   
   p {
     font-size: 26px;
@@ -192,7 +197,10 @@
    margin-left: 10px;
    color: black;
  }
-
+ .user_username {
+  font-size: 32px;
+  margin: 0;
+}
 
 }
 
@@ -209,7 +217,7 @@
   justify-content: space-between;
   align-items: center;
 
-    p {
+    .category_name {
      background: #020303;
      padding: 12px 20px;
      border-radius: 4px;
@@ -302,4 +310,28 @@
   border-radius: 4px;
   color: black;
   
+}
+
+
+
+
+
+// notadmin
+
+.postspage_notadmin {
+  background: white;
+  width: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+
+  .createpost_btn {
+    max-height: 24px;
+    margin-left: 100px;
+  }
+}
+
+.userpost_container {
+  
+  margin-bottom: 40px;
 }
