--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Category</h1>
+<div class="categories_form">
+<h1>Новая категория</h1>
 
 <%= render 'form', category: @category %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Назад', categories_path, :class => 'category_btn' %>
+</div>
