--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -23,7 +23,7 @@
       padding: 12px 22px;
       outline: none;
       border-radius: 4px;
-      color: black;
+      color: #020303;
     
     }
     .category_btn {
@@ -31,7 +31,7 @@
       padding: 8px 18px;
       outline: none;
       border-radius: 4px;
-      color: black;
+      color: #020303;
       
     }
     
@@ -52,6 +52,8 @@
       .category_name {
 
         margin-bottom: 40px !important;
+
+       
         
       }
     }
