--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -222,13 +222,25 @@
      padding: 12px 20px;
      border-radius: 4px;
      color: #ffffff;
+
+     a {
+      color: white;
+    }
     }
   
 
 }
 
 
-
+.like_btn {
+  background-color: #020303;
+  padding: 4px;
+  border-radius: 6px;
+  outline: none;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
 
 
 // form
@@ -303,12 +315,13 @@
     width: 400px;
 }
 .category_btn {
-  background-color: #E2E2E2;
+  background-color: #EFEFEF;
   padding: 8px 18px;
   max-height: 32px;
   outline: none;
   border-radius: 4px;
   color: black;
+  cursor: pointer;
   
 }
 
