--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,12 +15,12 @@
 
   <div class="form_field">
     <%= form.label :name %>
-    <%= form.text_field :name, :class => 'category_btn' %>
+    <%= form.text_field :name, :class => 'form_field' %>
   </div>
 
   <div class="form_field">
     <%= form.label :description %>
-    <%= form.text_area :description, :class => 'category_btn' %>
+    <%= form.text_area :description, :class => 'form_field' %>
   </div>
 
   <div class="form_btn">
