--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,6 +10,11 @@
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
 
+<div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autocomplete: "username", :class => 'form_field' %>
+</div>
+
     <div class="field">
       <%= f.label :password %>
       <% if @minimum_password_length %>
