--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -142,7 +142,8 @@
   .createpost_btn {
      float: right;
      max-width: 100px;
-     margin-bottom: 10px;
+     margin-bottom: 30px;
+     padding: 20px 24px;
      background: #EFEFEF;
   }
 }
@@ -308,6 +309,7 @@
   justify-content: end;
   max-height: 196px;
   align-items: center;
+  margin-left: 20px;
 }
 .categories_header {
   display: flex;
@@ -341,6 +343,7 @@
   .createpost_btn {
     max-height: 24px;
     margin-left: 100px;
+    margin-bottom: 30px;
   }
 }
 
